[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["Kushagra Gupta <kushgpt08@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
structopt = "0.3.20"
color-eyre = "0.5.8"
either="1.6.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false

[profile.release]
opt-level = 3
lto = true
incremental = true
codegen-units = 1