[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["Kushagra Gupta <kushgpt08@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
structopt = "0.3.20"
color-eyre = "0.5.8"
either="1.6.1"
itertools = "0.10.1"
rayon = "1.5.1"
regex = "1.3.7"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
html_reports = true

[profile.bench]
opt-level = 3
lto = "fat"
incremental = true
codegen-units = 1

[profile.release]
opt-level = 3
lto = "fat"
incremental = true
codegen-units = 1
panic = "abort"